--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
     "react-youtube": "^10.1.0"
